feat(add-offer-to-cart): implement pojo, mapper, controller, service and repository to manage shopping-cart